ajuste de seção animes

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <a class="card" href="#" target="_blank">
                             <div class="card-header">
-                                <h2>Novos Episodios </h2>
+                                <h2>Assistir</h2>
                             </div>
                             <img src="./img/Baki Poster.jpg" alt="Baki Poster">
                             <div class="card-body">
@@ -160,7 +160,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <a class="card" href="#" target="_blank">
                             <div class="card-header">
-                                <h2>Novos Episodios </h2>
+                                <h2>Assistir</h2>
                             </div>
                             <img src="./img/Another Poster.jpg" alt="Another Poster">
                             <div class="card-body">
@@ -171,7 +171,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <a class="card" href="#" target="_blank">
                             <div class="card-header">
-                                <h2>Novos Episodios </h2>
+                                <h2>Assistir</h2>
                             </div>
                             <img src="./img/Blue Exorcist Poster.jpg" alt="Blue Exorcist Poster">
                             <div class="card-body">
@@ -182,7 +182,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <a class="card" href="#" target="_blank">
                             <div class="card-header">
-                                <h2>Novos Episodios </h2>
+                                <h2>Assistir</h2>
                             </div>
                             <img src="./img/Bungou Stray Dogs Poster.png" alt="Bungou Stray Dogs Posterr">
                             <div class="card-body">
@@ -193,7 +193,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <a class="card" href="#" target="_blank">
                             <div class="card-header">
-                                <h2>Novos Episodios </h2>
+                                <h2>Assistir</h2>
                             </div>
                             <img src="./img/Dragon Ball Super Poster.jpg" alt="Dragon Ball Super Poster">
                             <div class="card-body">
@@ -204,7 +204,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <a class="card" href="#" target="_blank">
                             <div class="card-header">
-                                <h2>Novos Episodios </h2>
+                                <h2>Assistir</h2>
                             </div>
                             <img src="./img/HXH Poster.jpg" alt="HxH Poster">
                             <div class="card-body">
